// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Artwork /> should render empty success response 1`] = `
.c3 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 26px;
}

.c4 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 22px;
  line-height: 30px;
}

.c0 {
  min-height: 100vh;
}

.c1 {
  margin: 1rem;
}

.c2 {
  margin-bottom: 1rem;
  display: inline-block;
}

<main
  class="c0"
>
  <section
    class="c1"
  >
    <a
      class="c2"
      href="/collect"
    >
      <div
        class="c3"
        font-family="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
        font-size="16px"
      >
        &lt; Collect
      </div>
    </a>
    <div
      class="c4"
      font-family="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
      font-size="22px"
    >
      There was an error
    </div>
    <pre
      style="max-width: 700px;"
    >
      {
  "graphQLErrors": [],
  "networkError": {},
  "message": "Network error: error"
}
    </pre>
  </section>
</main>
`;

exports[`<Artwork /> should render loading state initially 1`] = `
.c3 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 26px;
}

.c4 {
  -webkit-animation: FiaaB 1s infinite linear;
  animation: FiaaB 1s infinite linear;
  position: absolute;
  background: #000;
  width: 25px;
  height: 6px;
  top: calc(50% - 6px / 2);
  left: calc(50% - 25px / 2);
}

.c0 {
  min-height: 100vh;
}

.c1 {
  margin: 1rem;
}

.c2 {
  margin-bottom: 1rem;
  display: inline-block;
}

<main
  class="c0"
>
  <section
    class="c1"
  >
    <a
      class="c2"
      href="/collect"
    >
      <div
        class="c3"
        font-family="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
        font-size="16px"
      >
        &lt; Collect
      </div>
    </a>
    <div
      class="c4"
      color="black100"
      height="6"
      width="25"
    />
  </section>
</main>
`;

exports[`<Artwork /> should render success response 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: 1rem;
  margin-right: 1rem;
  padding-top: 1rem;
}

.c3 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 26px;
}

.c7 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 26px;
}

.c0 {
  min-height: 100vh;
}

.c1 {
  margin: 1rem;
}

.c5 {
  height: 50vh;
}

.c2 {
  margin-bottom: 1rem;
  display: inline-block;
}

<main
  class="c0"
>
  <section
    class="c1"
  >
    <a
      class="c2"
      href="/collect"
    >
      <div
        class="c3"
        font-family="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
        font-size="16px"
      >
        &lt; Collect
      </div>
    </a>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <img
          alt="Hossam Dirar, ‘Nefertiti’, 2018"
          height="803"
          src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=799&height=803&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FCbM3QgRJTqffp_SwZV5FxQ%2Flarge.jpg"
          srcset="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=799&height=803&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FCbM3QgRJTqffp_SwZV5FxQ%2Flarge.jpg, https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=799&height=803&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FCbM3QgRJTqffp_sdsdsSwZV5FxQ%2Flarge.jpg 1.5x"
          style="object-fit: contain; width: 100%; height: 100%;"
          width="400"
        />
        <div
          class="c6"
        >
          <div
            class="c7"
            font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
            font-size="18px"
          >
            <strong>
              Hossam Dirar
            </strong>
          </div>
          <div
            class="c7"
            font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
            font-size="18px"
          >
            Hossam Dirar, ‘Nefertiti’, 2018
          </div>
        </div>
      </div>
    </div>
  </section>
</main>
`;
